--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,9 @@ services :
       - "4002"
     networks : 
       - proyectos-app
-  
+    environment:
+      - MONGO_URI=${MONGO_URI}
+      - PORT=4002
   loader-balancer:
     container_name : loader-balancer
     image: loader-balancer:v1
